--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pets</title>
+    <!-- <link rel="stylesheet" type="text/css" href="css/html5reset.css"> -->
+    <link rel="stylesheet" type="text/css" href="css/style.css"> 
+    <title>Home</title>
 </head>
 <body>
-    <a href ="#skip">Skip to Main Content</a>
+    <a href ="#skip" class="visually-hidden focusable" tabindex=0>Skip to Main Content</a>
     <header>
         <nav>
             <ul>
