--- a/pets.html
+++ b/pets.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" type="text/css" href="css/html5reset.css"> -->
+    <link rel="stylesheet" type="text/css" href="css/style.css"> 
     <title>Pets</title>
 </head>
 <body>
-    <a href = "#skip">Skip to Main Content</a>
+    <div class="skipbar">
+        <a href = "#skip" tabindex="0">Skip to Main Content</a>
+    </div>
     <header>
         <nav>
             <ul>
@@ -17,7 +20,6 @@
                 <li><a href="travel.html">Travel</a></li>
             </ul>
         </nav>
-        <h1>Week Two discussion</h1>
     </header>
 
     <main id="skip">
