--- a/recipes.html
+++ b/recipes.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- <link rel="stylesheet" type="text/css" href="css/html5reset.css"> -->
+    <link rel="stylesheet" type="text/css" href="css/style.css"> 
+    <title>Recipes</title>
 </head>
 <body>
-    <a href = "#skip">Skip to Main Content</a>
+    <div class="skipbar">
+        <a href = "#skip" tabindex="0">Skip to Main Content</a>
+    </div>
     <header>
         <nav>
             <ul>
