--- a/travel.html
+++ b/travel.html
@@ -3,15 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- <link rel="stylesheet" type="text/css" href="css/html5reset.css"> -->
+    <link rel="stylesheet" type="text/css" href="css/style.css"> 
+    <title>Travel</title>
 </head>
 <body>
-    <a href = "#skip">Skip to Main Content</a>
+    <div class="skipbar">
+        <a href = "#skip" tabindex="0">Skip to Main Content</a>
+    </div>
     <header>
         <nav>
             <ul>
-            <li><a href = "index.html">Home</a></li>
-            <li><a href="pets.html">Pets</a></li>
+                <li><a href = "index.html">Home</a></li>
+                <li><a href="pets.html">Pets</a></li>
                 <li><a href="recipes.html">Recipes</a></li>
                 <li><a href="travel.html">Travel</a></li>
             </ul>
