--- a/pets.html
+++ b/pets.html
@@ -9,16 +9,16 @@
 </head>
 <body>
     <div class="skipbar">
-        <a href = "#skip" tabindex="0">Skip to Main Content</a>
+        <a href = "#skip" class="skip">Skip to Main Content</a>
     </div>
     <header>
         <nav>
-            <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href="pets.html">Pets</a></li>
-                <li><a href="recipes.html">Recipes</a></li>
-                <li><a href="travel.html">Travel</a></li>
-            </ul>
+            <div class="navbar">
+                <a href = "index.html" class="home">Home</a>
+                <a href="pets.html" class="pet active">Pets</a>
+                <a href="recipes.html" class="recipes">Recipes</a>
+                <a href="travel.html" class="travel">Travel</a>
+            </div>
         </nav>
     </header>
 
@@ -110,11 +110,12 @@
             <p>Her favorite food is corn. One day, she stole corn on the cob from the dining table, which was surprising because she is normally gentle and polite. She took the stolen corn to the patio and enjoyed her meal by herself. Unfortunately, the corn turned out to be unripe, so she ended up vomiting it all later.</p>
             <h3>Photo Gallery</h3>
 
-            <div class="grid"></div>
+            <div class="grid">
                 <img src="images/Justin_Lee/sage_young.jpeg" width="200" alt = "A young golden retriever is laying down">
                 <img src="images/Justin_Lee/sage_car.jpeg"  width ="200" alt="A happy golden retriever is sitting in the car's backseat">
                 <img src="images/Justin_Lee/sage_sleep.jpeg" width="200" alt="A golden retriever is sleeping on the couch">
                 <img src="images/Justin_Lee/sage_pet.jpeg" width="200" alt="A man's hand is petting a golden retriever's neck">
+            </div>
             </div>
 
             <h3>Likes</h3>
