--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <title>Home</title>
 </head>
 <body>
-    <a href ="#skip" class="visually-hidden focusable" tabindex=0>Skip to Main Content</a>
+    <a href ="#skip" class="skip">Skip to Main Content</a>
     <header>
         <nav>
-            <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href="pets.html">Pets</a></li>
-                <li><a href="recipes.html">Recipes</a></li>
-                <li><a href="travel.html">Travel</a></li>
-            </ul>
+            <div class="navbar">
+                <a href = "index.html" class="home active">Home</a>
+                <a href="pets.html" class="pet">Pets</a>
+                <a href="recipes.html" class="recipes">Recipes</a>
+                <a href="travel.html" class="travel">Travel</a>
+            </div>
         </nav>
     </header>
 
