--- a/recipes.html
+++ b/recipes.html
@@ -9,16 +9,16 @@
 </head>
 <body>
     <div class="skipbar">
-        <a href = "#skip" tabindex="0">Skip to Main Content</a>
+        <a href = "#skip" class="skip">Skip to Main Content</a>
     </div>
     <header>
         <nav>
-            <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href="pets.html">Pets</a></li>
-                <li><a href="recipes.html">Recipes</a></li>
-                <li><a href="travel.html">Travel</a></li>
-            </ul>
+            <div class="navbar">
+                <a href = "index.html" class="home">Home</a>
+                <a href="pets.html" class="pet">Pets</a>
+                <a href="recipes.html" class="recipes active">Recipes</a>
+                <a href="travel.html" class="travel">Travel</a>
+            </div>
         </nav>
     </header>
 
@@ -55,9 +55,11 @@
             </ol>
 
             <h3>Photo Gallery</h3>
-            <img src="images/Sisi_Chen/chicken_wings_chopsticks.jpg" width ="200" alt = "A chicken wing picked up by chopsticks">
-            <img src="images/Sisi_Chen/boils_in_coke.jpg"  width ="200" alt="Chicken wings boiled in coke">
-            <img src="images/Sisi_Chen/chicken-wings_and_rice_cake.jpg"  width ="200" alt="coca-cola chicken wings served with rice cake">
+            <div class="grid recipe">
+                <img src="images/Sisi_Chen/chicken_wings_chopsticks.jpg" width ="200" alt = "A chicken wing picked up by chopsticks">
+                <img src="images/Sisi_Chen/boils_in_coke.jpg"  width ="200" alt="Chicken wings boiled in coke">
+                <img src="images/Sisi_Chen/chicken-wings_and_rice_cake.jpg"  width ="200" alt="coca-cola chicken wings served with rice cake">
+            </div>
         </div>
         <br>
         <div>
@@ -92,9 +94,11 @@
             </ol>
 
             <h3>Photo Gallery</h3>
-            <img src="images/Kay_Malan/Zucchini_fritters_2.jpeg" width ="200" alt = "Grated zucchini">
+            <div class="grid recipe">
+            <img src="images/Kay_Malan/Zucchini_fritters_2.jpeg" width ="200" alt = "Grated zucchini" class="zucchini">
             <img src="images/Kay_Malan/Zucchini_fritters_3.jpeg"  width ="200" alt="Ingredients for zucchini fritters combined">
             <img src="images/Kay_Malan/Zucchini_fritters_4.jpg"  width ="200" alt="Zucchini fritters in the pan cooking">
+            </div>
         </div>
         <br>
         <div>
@@ -123,9 +127,11 @@
             </ol>
 
             <h3>Photo Gallery</h3>
+            <div class="grid recipe">
             <img src="images/Meiqi_Zhao/jiaozi2.jpeg" width ="200" alt = "Three dishes of Jiaozi">
             <img src="images/Meiqi_Zhao/jiaozi3.jpeg"  width ="200" alt="Steamed jiaozi">
             <img src="images/Meiqi_Zhao/jiaozi4.jpeg"  width ="200" alt="making jiaozi">
+        </div>
         </div>
         
     </main>
