--- a/travel.html
+++ b/travel.html
@@ -9,16 +9,16 @@
 </head>
 <body>
     <div class="skipbar">
-        <a href = "#skip" tabindex="0">Skip to Main Content</a>
+        <a href = "#skip" class="skip">Skip to Main Content</a>
     </div>
     <header>
         <nav>
-            <ul>
-                <li><a href = "index.html">Home</a></li>
-                <li><a href="pets.html">Pets</a></li>
-                <li><a href="recipes.html">Recipes</a></li>
-                <li><a href="travel.html">Travel</a></li>
-            </ul>
+            <div class="navbar">
+                <a href = "index.html" class="home">Home</a>
+                <a href="pets.html" class="pet">Pets</a>
+                <a href="recipes.html" class="recipes">Recipes</a>
+                <a href="travel.html" class="travel active">Travel</a>
+            </div>
         </nav>
     </header>
 
@@ -26,14 +26,17 @@
         <h1>Travel</h1>
         <div>
             <h2>Chiangmai, Thailand</h2>
-            <img src="images/Cindy_Ye/chiangmaigif.gif" width = "400" alt="Night of chiangmai">
-            <img src="images/Cindy_Ye/chiangmai.jpeg" width ="200" alt = "chiangmai">
+            <div class="city">
+                <img src="images/Cindy_Ye/chiangmaigif.gif" width = "400" alt="Night of chiangmai" class="gif">
+                <img src="images/Cindy_Ye/chiangmai.jpeg" width ="200" alt = "chiangmai">
+            </div>
 
             <h3>Geographical Location: Asia</h3>
 
             <p>Chiang Mai, nestled in the lush hills of northern Thailand, is a city that captivates with its unique blend of cultural richness and natural beauty. Situated approximately 700 kilometers north of Bangkok, Chiang Mai is the largest city in the region and serves as the capital of the province of the same name. Its geographical location is nothing short of enchanting, surrounded by forested mountains and picturesque landscapes. This charming city, often referred to as the "Rose of the North," offers visitors a delightful escape from the bustling urban life, inviting them to explore a realm where tradition meets modernity amidst a backdrop of stunning scenery.</p> 
             <p>The heart of Chiang Mai beats with a rich history that dates back over 700 years. Founded in 1296, the city was originally the capital of the ancient Lanna Kingdom. Today, remnants of its storied past are scattered throughout the city, from the ancient temples that dot the landscape to the preserved city walls and moats that harken back to a bygone era. Among the city's treasures is the revered Wat Phra Singh, a 14th-century temple known for its intricate architecture and revered Buddha image. Chiang Mai's historical sites provide a captivating glimpse into its heritage, making it a destination that seamlessly weaves together the past and present for visitors to explore and appreciate.</p>
             <h3>Photo Gallery</h3>
+            <div class="grid travel">
             <figure>
                 <img src="images/Cindy_Ye/chiangmai1.jpeg" width ="200" alt = "colorful hot balloons in the heart of Chiang Mai">
                 <figcaption>You can see hot balloons in Chiang Mai as well</figcaption>
@@ -53,26 +56,29 @@
             <figure>
                 <img src="images/Cindy_Ye/chiangmai5.jpeg" width ="200" alt = "several delicious dishes from Chiang Mai">
                 <figcaption>And don't forget to treat yourself with delicious Thai Food!</figcaption>
-            </figure>    
+            </figure>  
+        </div>  
         </div>
         <br>
         <div>
             <h2>New York</h2>
-            <img src="images/Marilyn_Wang_discussion_007/NYC.gif" width = "400" alt="skyline of new york city">
-            <img src="images/Marilyn_Wang_discussion_007/NYC_Empire_State.jpeg" width ="200" alt = "empire state building">
-
+            <div class="city">
+                <img src="images/Marilyn_Wang_discussion_007/NYC.gif" width = "400" alt="skyline of new york city" class="gif">
+                <img src="images/Marilyn_Wang_discussion_007/NYC_Empire_State.jpeg" width ="200" alt = "empire state building">
+            </div>
             <h3>Geographical Location: North America</h3>
 
             <p>New York City thrives as a vibrant tapestry of cultures, languages, and experiences. Its streets pulse with energy, reflecting the city's boundless diversity. From the rhythmic beats of street performers in Times Square to the aroma of diverse cuisines wafting through neighborhoods, NYC's lively atmosphere encapsulates a living, breathing microcosm of the world.</p> 
             <p>From the iconic skyline to the bustling streets, it's a place where dreams are both pursued and realized. The city's fast-paced lifestyle is balanced by its diverse communities, offering a unique blend of cultures, cuisines, and experiences around every corner. Amid the hustle and bustle, there's a sense of constant motion and an electrifying energy that makes life in the Big Apple truly extraordinary.</p>
             <h3>Photo Gallery</h3>
+            <div class="grid travel">
             <figure>
                 <img src="images/Marilyn_Wang_discussion_007/washington-square-winter.jpg" width ="200" alt = "winter in washington square park brings another view of NYC">
                 <figcaption>Winter in Washington Square Park brings another view of NYC</figcaption>
             </figure>
             <figure>
                 <img src="images/Marilyn_Wang_discussion_007/Time_Square.png" width ="200" alt = "image of Time Square">
-                <figcaption>Time square is crowded with peole from all over the world, and its aliveness flows in the lights and shadows of the city</figcaption>
+                <figcaption>Time square is crowded with peole from all over the world.</figcaption>
             </figure>
             <figure>
                 <img src="images/Marilyn_Wang_discussion_007/Yellow_Cab.jpg" width ="200" alt = "picture of yellow cab">
@@ -85,12 +91,15 @@
             <figure>
                 <img src="images/Marilyn_Wang_discussion_007/bibble-sip.jpg" width ="200" alt = "picture of bibble & sip">
                 <figcaption>My favorite cream puff place in NYC: Bibble & Sip</figcaption>
-            </figure>    
+            </figure> 
+        </div>   
         </div>
         <div>
             <h2>Shanghai</h2>
-            <img src="images/Shanghai/shanghai_gif.gif" width = "400" alt="skyline of Shanghai">
-            <img src="images/Shanghai/shanghai_non_gif.jpeg" width ="200" alt = "picture of shanghai">
+            <div class="city">
+                <img src="images/Shanghai/shanghai_gif.gif" width = "400" alt="skyline of Shanghai" class="gif">
+                <img src="images/Shanghai/shanghai_non_gif.jpeg" width ="200" alt = "picture of shanghai">
+            </div>
 
             <h3>Geographical Location: Asia</h3>
 
@@ -99,29 +108,31 @@
             <p>Shanghai is not just a city of skyscrapers; it's a city of contrasts. The serene Yu Garden and its classical Chinese architecture offer a peaceful escape from the bustling streets, while the ultra-modern shopping districts like Nanjing Road cater to the desires of avid shoppers. The city's food scene is a culinary adventure in itself, with a vast array of local and international dishes available from street vendors to Michelin-starred restaurants. Additionally, Shanghai is a gateway to Chinese culture and history, as it hosts numerous festivals, art exhibitions, and performances that showcase China's heritage. Whether you're wandering through ancient temples, exploring the thriving contemporary art scene, or enjoying a traditional tea ceremony, Shanghai promises a multifaceted experience that captures the essence of China's past, present, and future.
             </p>
             <h3>Photo Gallery</h3>
+            <div class="grid travel">
             <figure>
                 <img src="images/Shanghai/yu_garden.jpg" width ="200" alt = "The beautiful Yu Garden">
-                <figcaption>Yu garden is a classical garden built in Ming Dynasty. It is located in Huangpu District, Shanghai, China. It was in the northeast of the old city of Shanghai, bordering Fuyou Road in the north, Anren Street in the east, and Chenghuang Temple and Yu Garden Mall in the southwest.
+                <figcaption>Yu Garden
                 </figcaption>
             </figure>
             <figure>
                 <img src="images/Shanghai/the_bund.jpg" width ="200" alt = "Buildings of various sytles from aound the world">
-                <figcaption>There are 52 classical revival buildings with different styles standing on the Bund, known as the Bund World Architecture Exhibition Group. It is an important historical site and representative building in modern China, and one of the landmarks of Shanghai. In November 1996, the State Council of the People's Republic of China listed it as the fourth batch of national key cultural heritage protection units.</figcaption>
+                <figcaption>The Bund</figcaption>
             </figure>
             <figure>
                 <img src="images/Shanghai/Shanghai-Tower.jpg" width ="200" alt = "picture of shanghai tower">
-                <figcaption>Shanghai Tower, a huge high-rise landmark skyscraper in Shanghai, is now the tallest building in China and the third tallest building in the world. It was built on November 29, 2008 and the overall construction of the building was completed on March 12, 2016.
+                <figcaption>Shanghai Tower, a huge high-rise landmark skyscraper in Shanghai
                 </figcaption>
             </figure>
             <figure>
                 <img src="images/Shanghai/China-Art-Museum.jpg" width ="200" alt = "picture of china art museum">
-                <figcaption>The China Art Museum was renovated from the China National Pavilion at the 2010 Shanghai World Expo. Its predecessor was the Shanghai Art Museum, which was founded in 1956. It was relocated to its current location on October 1, 2012 and renamed as the China Art Museum.
+                <figcaption>The China Art Museum
                 </figcaption>
             </figure>
             <figure>
                 <img src="images/Shanghai/wukang-building.jpg" width ="200" alt = "picture of wukang building">
-                <figcaption>Wukang Building, formerly known as I.S.S Normandie Apartment, also known as Dongmeite Apartment, is located at 1842-1858 Huaihai Middle Road, Xuhui District, Shanghai. The building was first built in 1924 with funding from the Universal Savings Association and was designed by renowned architect Hudec, who resided in Shanghai. It is the first corridor style apartment building in Shanghai. In 1994, Wukang Building was selected as the second batch of excellent historical buildings in Shanghai.</figcaption>
-            </figure>    
+                <figcaption>Wukang Building, formerly known as I.S.S Normandie Apartment</figcaption>
+            </figure>  
+        </div>  
         </div>
         
     </main>  
