--- a/recipes.html
+++ b/recipes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" type="text/css" href="css/html5reset.css"> -->
+    <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css"> 
     <title>Recipes</title>
 </head>
@@ -43,15 +43,15 @@
             </ul>
             <h3>Recipe Steps</h3>
             <ol>
-                <li>Wash and place chicken wings in a bowl</li>
-                <li>Add scallions, ginger slices, cooking wine, dark soy sauce and salt to the washed chicken wings, and mix them well</li>
-                <li>Cover the bowl with plastic wrap and marinate the chicken wings for 1 hour</li>
-                <li>Put the right amount of oil in the pot, and put the marinated chicken wings into the pot and fry it until golden brown on both sides </li>
-                <li>After fry the chicken wings until golden brown on both sides, then pour a can of coke into the pan and bring to a boil
+                <li>1. Wash and place chicken wings in a bowl</li>
+                <li>2. Add scallions, ginger slices, cooking wine, dark soy sauce and salt to the washed chicken wings, and mix them well</li>
+                <li>3. Cover the bowl with plastic wrap and marinate the chicken wings for 1 hour</li>
+                <li>4. Put the right amount of oil in the pot, and put the marinated chicken wings into the pot and fry it until golden brown on both sides </li>
+                <li>5. After fry the chicken wings until golden brown on both sides, then pour a can of coke into the pan and bring to a boil
                 </li>
-                <li>Continue to cook for an additional 2-3 minutes until the glaze has thickened and coats the wings nicely    
+                <li>6. Continue to cook for an additional 2-3 minutes until the glaze has thickened and coats the wings nicely    
                 </li>
-                <li>Transfer the Coca-Cola glazed chicken wings to a serving platter</li>
+                <li>7. Transfer the Coca-Cola glazed chicken wings to a serving platter</li>
             </ol>
 
             <h3>Photo Gallery</h3>
@@ -83,13 +83,13 @@
             </ul>
             <h3>Recipe Steps</h3>
             <ol>
-                <li>Combine eggs, salt, and pepper and whisk</li>
-                <li>Add pressed garlic</li>
-                <li>Grate the zucchini and squeeze the moisture out of it</li>
-                <li>Add zucchini and flour and mix</li>
-                <li>Heat oil in pan and add dollops of batter
+                <li>1. Combine eggs, salt, and pepper and whisk</li>
+                <li>2. Add pressed garlic</li>
+                <li>3. Grate the zucchini and squeeze the moisture out of it</li>
+                <li>4. Add zucchini and flour and mix</li>
+                <li>5. Heat oil in pan and add dollops of batter
                 </li>
-                <li>Serve with or without dipping sauce   
+                <li>6. Serve with or without dipping sauce   
                 </li>
             </ol>
 
@@ -119,11 +119,11 @@
             </ul>
             <h3>Recipe Steps</h3>
             <ol>
-                <li>Dough</li>
-                <li>Filling</li>
-                <li>Folding</li>
-                <li>Cooking</li>
-                <li>dipping sauces</li>
+                <li>1. Dough</li>
+                <li>2. Filling</li>
+                <li>3. Folding</li>
+                <li>4. Cooking</li>
+                <li>5. dipping sauces</li>
             </ol>
 
             <h3>Photo Gallery</h3>
